--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,3 +5,9 @@
         margin-top: -70px; /* Give negative margin of your fixed element */  	
         visibility: hidden; 
 }
+/* change the default distance measure to black text*/
+.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
+	border: 2px solid rgba(0,0,0,0.2);
+	background-clip: padding-box;
+	color: black;
+  }
